Fixed nav spacing

--- a/css/index.css
+++ b/css/index.css
@@ -183,6 +183,11 @@ header nav {
   align-items: center;
   position: fixed;
 }
+@media (max-width: 500px) {
+  header nav {
+    flex-wrap: wrap;
+  }
+}
 header nav .logo {
   justify-content: flex-start;
   margin-left: 2%;
@@ -192,10 +197,13 @@ header nav .menu {
   margin-right: 5%;
   font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
+  width: 40%;
+  text-align: end;
 }
 header nav .menu a {
   color: lightsteelblue;
   text-decoration: none;
+  padding: 0 1%;
 }
 header nav .menu a:hover {
   color: #9fd1fe;
@@ -219,6 +227,9 @@ header nav .menu a:hover {
 .container .content .main-cta p {
   font-size: 2.3rem;
   color: rgba(0, 0, 0, 0.4);
+}
+.container .content .main-cta a {
+  text-decoration: none;
 }
 .container .content .main-cta button {
   margin: auto;
