--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,6 +18,10 @@
                 font-size: 2.3rem;
                 color: rgba(0, 0, 0, 0.4);
             }
+
+            a {
+                text-decoration: none;
+            }
         
             button {
                 margin: auto;
